--- a/期末作业/期末作业.md
+++ b/期末作业/期末作业.md
@@ -93,7 +93,7 @@ object 0: text: ....
 ```
 ### 利用符号执行对程序进行漏洞分析
 - 使用符号执行技术进行漏洞分析，利用符号执行对程序进行漏洞分析。漏洞分析分析的过程主要包括符号执行和约束求解两个部分，并交替执行。通过使用符号执行，将变量的取值表示为符号和常量的计算表达式，将路径条件和程序存在漏洞的条件表示为符号取值的约束。约束求解过程一方面判断路径条件是否可满足，根据判断结果对分析的路径进行取舍，另一方面检查程序存在漏洞的条件是否可以满足。符号执行的过程常常需要利用一定的漏洞分析规则，这些规则描述了在什么情况下需要引入符号，以及在什么情况下程序可能存在漏洞等信息。
-[待分析程序](https://raw.githubusercontent.com/PWHL/Software-system-and-security/job1/%E6%9C%9F%E6%9C%AB%E4%BD%9C%E4%B8%9A/test.cpp)
+- [待分析程序](https://github.com/PWHL/Software-system-and-security/blob/job1/%E6%9C%9F%E6%9C%AB%E4%BD%9C%E4%B8%9A/test.cpp)
 ### 待完成
 
 ### 参考
